# hovercraft

./: Cargo.toml  README.md  TODO  buildm  dnf  plan  world.toml
.cargo/: config.toml
.github/workflows/: github-actions-rust-bin.yaml
assets/: bagel.glb
assets/models/: gnat.glb  gnat2.blend  gnat2.glb  gnat2_1.glb  gnat2_6.glb  gnat2explosion.glb  gnat4.glb  gubbins2.blend  gubbins2.glb  righty.glb
assets/shaders/: explode.wgsl  laser.wgsl  target.wgsl
shaders/: target.wgsl
src/: astarlib.rs  laser.rs  lib.rs  main.rs  physics.rs
