[package]
name = "hovercraft"
version = "0.1.0"
edition = "2024"
default-run = "hovermvp"

[profile.dev.package."*"]
opt-level = 2

[dependencies]
anyhow = "1.0.97"
bevy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9.1"
getrandom = { version = "0.3", features = ["wasm_js"] }
